Updated the jax-rs interfaces.
